<resources>
    <string name="history">기록</string>
    <string name="search">검색</string>
    <string name="hint_keyword">Username</string>
    <string name="saveKeyword">검색어 저장하기</string>
    <string name="loadKeyword">검색어 불러오기</string>
    <string name="star">star</string>
    <string name="fork">fork</string>
    <string name="authorLabel">Author:</string>
    <string name="emailLabel">Email:</string>
    <string name="dateLabel">Date:</string>
</resources>
