<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="park.keich.mobile_tutorial.presentation.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="24dp"
        android:paddingVertical="32dp">

        <EditText
            android:id="@+id/editText_keyword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rect_border"
            android:hint="@string/hint_keyword"
            android:lines="1"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@={viewModel.keyword}"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/button_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rect_red"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="@{() -> viewModel.loadRepositoryList()}"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/button_history"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_red"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/history"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_saveKeyword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rect_red"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/saveKeyword"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/button_loadKeyword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_keyword" />

        <Button
            android:id="@+id/button_loadKeyword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rect_red"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/loadKeyword"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_saveKeyword"
            app:layout_constraintTop_toBottomOf="@id/editText_keyword" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_saveKeyword"
            tools:listitem="@layout/item_repository" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
